--- a/layouts/partials/site_footer_license.html
+++ b/layouts/partials/site_footer_license.html
@@ -1,3 +1,3 @@
-<p class="text-center text-xs text-gray-500 mt-2">
+<!-- <p class="text-center text-xs text-gray-500 mt-2">
   © {{ now.Format "2006" }} Valentin Pfeil. All rights reserved.
-</p>
+</p> -->
