--- a/layouts/partials/components/footers/minimal.html
+++ b/layouts/partials/components/footers/minimal.html
@@ -25,5 +25,5 @@
 </div>
 
 <p class="text-center text-xs text-gray-500 mt-2">
-  © {{ now.Format "2006" }} Valentin Pfeil.
+  © {{ now.Format "2006" }} Valentin Pfeil. All rights reserved.
 </p>
